[project]
name = "eventtracer-py"
version = "0.0.2"
authors = [{ name = "Shish", email = "shish@shishnet.org" }]
description = "A library for tracing code into the chrome Event Trace format"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/shish/eventtracer-py"

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest-cov"]

[tool.setuptools]
py-modules = ["eventtracer"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --cov-fail-under 40"

[tool.coverage.run]
source = ["eventtracer"]

[tool.mypy]
files = "eventtracer"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
